Logo alignment fixes

--- a/src/app/components/header/header.component.scss
+++ b/src/app/components/header/header.component.scss
@@ -19,6 +19,7 @@
         margin: auto;
         padding-top: 1rem;
         margin-bottom: 2rem;
+        display: block;
     }
 
     &__toolbar {
